welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: ';' expected but '(' found.
	var x:Int==getX()
                       ^